Fix display icons "jumping" between play/buffering

--- a/src/css/flags/time-slider-above.less
+++ b/src/css/flags/time-slider-above.less
@@ -72,6 +72,7 @@ of the file to be defined separately.
   &:not(.jw-breakpoint-0) {
 
     &.jw-state-paused,
+    &.jw-state-buffering,
     &.jw-state-playing:not(.jw-flag-user-inactive),
     &.jw-flag-cast-available,
     &.jw-flag-casting {
